// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateMemoryInject > snapshot 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// buildMemoryContext — retrieves relevant memories for a user and formats them
// as a string you can prepend to your system prompt.
//
// Usage in a chat or agent route:
//
//   const memoryContext = await buildMemoryContext(userId, userMessage)
//   const result = streamText({
//     system: ['You are a helpful assistant.', memoryContext].filter(Boolean).join('\\n\\n'),
//     ...
//   })

import { embed } from 'ai'
import { openai } from '@ai-sdk/openai'
import { getMemoryStore } from '@/lib/memory/store'

export async function buildMemoryContext(
  userId: string,
  query: string,
  topK = 5,
): Promise<string> {
  const { embedding } = await embed({
    model: openai.embedding('text-embedding-3-small'),
    value: query,
  })

  const memories = await getMemoryStore().retrieve(userId, { embedding, topK })
  if (memories.length === 0) return ''

  return [
    'Relevant memories about this user:',
    ...memories.map((m) => \`- \${m.fact}\`),
  ].join('\\n')
}
"
`;

exports[`generateMemoryRetrieveRoute > snapshot 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// Retrieve route: embeds the query and returns the top-K most relevant memories.
// POST body: { userId: string, query: string, topK?: number }

import { embed } from 'ai'
import { openai } from '@ai-sdk/openai'
import { getMemoryStore } from '@/lib/memory/store'

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { userId, query, topK = 5 } = await req.json()
  if (!userId?.trim() || !query?.trim())
    return Response.json({ error: 'userId and query are required' }, { status: 400 })

  const { embedding } = await embed({
    model: openai.embedding('text-embedding-3-small'),
    value: query,
  })

  const memories = await getMemoryStore().retrieve(userId, { embedding, topK })

  return Response.json({ memories })
}
"
`;

exports[`generateMemorySaveRoute > snapshot 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// Save route: embeds a fact and stores it in the per-user memory store.
// POST body: { userId: string, fact: string }

import { embed, generateId } from 'ai'
import { openai } from '@ai-sdk/openai'
import { getMemoryStore } from '@/lib/memory/store'

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { userId, fact } = await req.json()
  if (!userId?.trim() || !fact?.trim())
    return Response.json({ error: 'userId and fact are required' }, { status: 400 })

  const { embedding } = await embed({
    model: openai.embedding('text-embedding-3-small'),
    value: fact,
  })

  await getMemoryStore().save({
    id: generateId(),
    userId,
    fact,
    embedding,
    createdAt: new Date(),
  })

  return Response.json({ ok: true })
}
"
`;

exports[`generateMemoryStore > snapshot 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// Per-user long-term memory store.
// The in-memory implementation is fine for development.
// Replace InMemoryMemoryStore with a database-backed adapter for production
// (e.g. PostgreSQL + pgvector, Redis, or any vector database).

import { cosineSimilarity } from 'ai'

export interface MemoryEntry {
  id: string
  userId: string
  fact: string
  embedding: number[]
  createdAt: Date
}

export interface MemoryStore {
  save(entry: MemoryEntry): Promise<void>
  retrieve(userId: string, params: { embedding: number[]; topK: number }): Promise<Pick<MemoryEntry, 'fact'>[]>
  clear(userId: string): Promise<void>
}

export class InMemoryMemoryStore implements MemoryStore {
  private entries: MemoryEntry[] = []

  async save(entry: MemoryEntry): Promise<void> {
    const idx = this.entries.findIndex((e) => e.id === entry.id)
    if (idx >= 0) {
      this.entries[idx] = entry
    } else {
      this.entries.push(entry)
    }
  }

  async retrieve(
    userId: string,
    { embedding, topK }: { embedding: number[]; topK: number },
  ): Promise<Pick<MemoryEntry, 'fact'>[]> {
    return this.entries
      .filter((e) => e.userId === userId)
      .map((e) => ({ entry: e, score: cosineSimilarity(embedding, e.embedding) }))
      .sort((a, b) => b.score - a.score)
      .slice(0, topK)
      .map(({ entry }) => ({ fact: entry.fact }))
  }

  async clear(userId: string): Promise<void> {
    this.entries = this.entries.filter((e) => e.userId !== userId)
  }
}

let _store: MemoryStore | undefined

export function getMemoryStore(): MemoryStore {
  if (!_store) _store = new InMemoryMemoryStore()
  return _store
}
"
`;
